<resources>
    <string name="app_name">WasteWise</string>
    <string name="header_login">Login To Your Account</string>
    <string name="email_address">Email Address</string>
    <string name="email_address_placeholder">Insert New Email Address</string>
    <string name="image_login">image_login</string>
    <string name="login_btn_text">Login</string>
    <string name="password">Password</string>
    <string name="password_placeholder">Insert New Password</string>
    <string name="not_a_member">Not a member?</string>
    <string name="register_now">Register Now</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="image_register">image_register</string>
    <string name="header_register">Create an Account</string>
    <string name="username">Username</string>
    <string name="username_placeholder">Insert New Username</string>
    <string name="button_register_text">Create Account</string>
    <string name="already_have_account">Already have Account?</string>
    <string name="bottom_register_text">By clicking Create Account you agree to Recognizes</string>
    <string name="and"><![CDATA[&]]></string>
    <string name="term_s_use">Term\'s Use</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="bg_image_profile">bg_image_profile</string>
    <string name="setting">Setting</string>
    <string name="ic_setting">ic_setting</string>
    <string name="privacy">Privacy</string>
    <string name="term_and_condition">Term and Condition</string>
    <string name="about">About</string>
    <string name="ic_about">ic_about</string>
    <string name="ic_privacy">ic_privacy</string>
    <string name="ic_terms">ic_terms</string>
    <string name="logout">Logout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account_information">Account Information</string>
    <string name="click_edit_to_update_data">Click edit to update data</string>
    <string name="edit">Edit</string>
    <string name="history_data_not_available">Data history tidak tersedia.</string>
    <string name="save">Save</string>
    <string name="change_the_data_in_provide_form">Change the data in provide form</string>
    <string name="insert_new_password">Insert New Password</string>
    <string name="insert_new_email">Insert New Email</string>
    <string name="insert_new_username">Insert New Username</string>
    <string name="text_about">
        WasteWise is an app designed to help people identify waste types and offer creative recycling ideas.
        Using image classification, we aim to support environmental sustainability.
        Developed by a team passionate about protecting the environment, this app is a small tool for making a big difference.
    </string>
    <string name="text_privacy">We value your privacy and are committed to protecting your personal information.</string>
    <string name="privacy_data">Data Collected: Uploaded images, names, and email addresses.</string>
    <string name="privacy_purpose">Purpose: To provide recycling recommendations and improve user experience.</string>
    <string name="privacy_protection">
        Data Protection: Your data is securely stored and will not be shared without your consent, except with third-party services that support this app (e.g., analytics services).
You have the right to request the deletion of your data at any time by contacting us.
    </string>
    <string name="text_term">By using this app, you agree to the following terms:</string>
    <string name="terms_value1">
        1. Use this app for lawful purposes only.
    </string>
    <string name="terms_value2">2. Do not misuse the services for illegal activities or violate the rights of others.</string>
    <string name="terms_value3">3. Understand that the app developers are not responsible for any decisions made based on the app’s recommendations.</string>
    <string name="welcome_heading">Welcome to WasteWise</string>
    <string name="welcome_description">Discover the power of recycling and unleash your creativity. Start classifying waste and turn it into amazing crafts. Together, we make the world cleaner and greener!</string>
    <string name="start_here">Start Here</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_history">History</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="history">History</string>
    <string name="image_home">image_home</string>
    <string name="take_a_photo_of_waste">Take a Photo of Waste</string>
    <string name="snap_a_photo_of_the_waste_to_identify_its_type_and_discover_creative_craft_ideas">Snap a photo of the waste to identify its type and discover creative craft ideas!</string>
    <string name="arrow">arrow</string>
    <string name="floating_action_button">floating_action_button</string>
    <string name="image_upload">image_upload</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="analyze">Analyze</string>
    <string name="image_result">image_result</string>
    <string name="result">Result</string>
    <string name="recycle_recommendation">Recycle Recommendation</string>
    <string name="judul">Title</string>
    <string name="description">Description</string>
    <string name="image_item_result">image_item_result</string>
    <string name="empty_name">Name cannot be empty</string>
    <string name="empty_email">Email cannot be empty</string>
    <string name="empty_password">Password cannot be empty</string>
    <string name="about_title">About</string>
    <string name="about_content">Welcome to WasteWise! \n\nOur mission is to enhance recycling awareness and empower individuals to take meaningful steps toward a sustainable future. WasteWise helps you classify waste using advanced technology, discover creative reuse ideas, and track your recycling habits. \n\nWhether you’re a beginner or an eco-conscious enthusiast, our app provides tools to make recycling simple, fun, and impactful. Join us in creating a cleaner, greener world!</string>
    <string name="terms_title">Terms of Use</string>
    <string name="terms_content">By using WasteWise, you agree to the following terms:\n\n1. Responsible Use: Use the app for personal or educational purposes related to waste classification and recycling.\n2. Accurate Information: Ensure that any data or images you provide are accurate and comply with applicable laws.\n3. Content Ownership: Respect intellectual property rights. Content provided by WasteWise is for your personal use and may not be redistributed without permission.\n4. Prohibited Actions: Avoid misuse of the app, such as uploading inappropriate content or using the app for commercial purposes without approval.\n\nNon-compliance with these terms may result in account restrictions or termination. By continuing, you agree to these terms.</string>
    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="privacy_policy_content">At WasteWise, your privacy is our priority. We collect and use your data to improve the app\'s performance, personalize your experience, and enhance waste classification accuracy.\n\nWhat We Collect:\n- Basic user information (e.g., email, username).\n- Images you upload for waste classification.\n- App usage statistics to improve features.\n\nHow We Use It:\n- To provide accurate waste classification results.\n- To personalize app features and recommendations.\n- To maintain and secure your account.\n\nWe do not sell your data to third parties. Any shared information will always be anonymized and used responsibly. For detailed policies, visit our website or contact support.</string>
    <string name="logged_out_message">You successfully logout.</string>
    <string name="nothing_to_show">Nothing to Show</string>
    <string name="account_info">Account Information</string>
    <string name="account_info_description">Click edit to update data</string>
    <string name="edit_data">Edit Data</string>
    <string name="edit_data_description">Change the data in provide form</string>
    <string name="image_detail_recomendation">image_detail_recomendation</string>
    <string name="favorite_btn">favorite_btn</string>
    <string name="detail">Detail Recomendation</string>
    <string name="favorite_recycle_item_recommendation">Favorite Recycle Item Recommendation</string>
</resources>