<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.team.wastewise.view.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_uploadFragment"
            app:destination="@id/navigation_upload" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.team.wastewise.view.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.team.wastewise.view.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_upload"
        android:name="com.team.wastewise.view.upload.UploadFragment"
        android:label="@string/upload"
        tools:layout="@layout/fragment_upload" />
</navigation>