<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".view.home.HomeFragment">

    <ImageView
        android:id="@+id/image_home"
        android:layout_width="248dp"
        android:layout_height="232dp"
        android:src="@drawable/image_home"
        android:layout_marginTop="73dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:contentDescription="@string/image_home"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_title_home"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/take_a_photo_of_waste"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="44dp"
        android:layout_marginStart="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_home" />

    <TextView
        android:id="@+id/text_description_home"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minLines="2"
        android:text="@string/snap_a_photo_of_the_waste_to_identify_its_type_and_discover_creative_craft_ideas"
        android:layout_marginTop="18dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/text_title_home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/image_arrow"
        android:layout_width="224dp"
        android:layout_height="217dp"
        android:src="@drawable/arrow"
        android:contentDescription="@string/arrow"
        android:layout_marginTop="48dp"
        android:layout_marginStart="79dp"
        android:layout_marginEnd="109dp"
        app:layout_constraintTop_toBottomOf="@id/text_title_home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/home_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/floating_action_button"
        android:src="@drawable/ic_scan"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="90dp"
        android:backgroundTint="@color/colorPrimary"
        app:tint="@color/white"
        android:layout_marginTop="225dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>